used new argument order when computing analogies

--- a/templates/input-king-queen.html
+++ b/templates/input-king-queen.html
@@ -68,13 +68,13 @@
                                     <div class="form-group">
 
                                         <label for="begriff_3" class="form-label">Begriff 3:</label>
-                                        <input class="form-control" id="begriff_2" name="begriff_3" value="Mutter">
+                                        <input class="form-control" id="begriff_2" name="begriff_3" value="Vater">
                                     </div>
                                 </div>
                                 <div class="form-btn">
                                     <button class="submit-btn">Analogie berechnen</button>
                                 </div>
-                                <p id="analogy-result">{{begriff_1}} steht zu {{begriff_2}} wie {{begriff_4}} zu {{begriff_3}}</p>
+                                <p id="analogy-result">{{begriff_1}} steht zu {{begriff_2}} wie {{begriff_3}} zu {{begriff_4}}</p>
                             </div>
                         </form>
                     </div>
